--- a/css/museum.css
+++ b/css/museum.css
@@ -20,3 +20,47 @@ body {
 #main-navbar .nav-link:hover {
   color: #ea1c2d;
 }
+
+#headingGroup span {
+  color: #ea1c2d;
+}
+
+#headingGroup h1 {
+  font-weight: 100;
+  font-size: 4rem;
+}
+
+h2 {
+  color: #ea1c2d;
+  font-weight: 100;
+  font-size: 2.5rem;
+}
+
+.coloring p {
+  color: #f498b8;
+  font-weight: 100;
+  font-size: 1.125rem;
+  line-height: 2;
+}
+
+
+.navbar.scrolled {
+    background: rgb(222,192,222);
+    transition: background 700ms;
+}
+
+
+
+@media (max-width: 1300px) {
+  #headingGroup h1 {
+    font-weight: 100;
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  h2 {
+    font-size: 2rem;
+    font-weight: 100;
+  }
+}
