--- a/project2/css/tablet.css
+++ b/project2/css/tablet.css
@@ -1,28 +1,63 @@
 
-  .heading {
-    width: 100%;
-    height: 250px;
-    flex-direction: column;
-    justify-content: space-around;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-
   body {
     margin: 0px;
   }
 
-  .starts span {
-    display: inline;
+  header {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  #logo-menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 30px;
+    background-color: rgba(0,0,0,0);
+  }
+
+  .logo img {
+    width: 75px;
+  }
+
+  .main-nav ul {
+    display: flex;
+    flex-direction: row;
+    list-style-position: inside;
+    list-style-type: none;
+    padding: 10px;
+  }
+
+  .main-nav ul li {
+    padding: 0px 15px;
+  }
+
+  .main-nav ul li a {
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+
+  .heading {
+    color: white;
+    width: 100%;
+    height: 500px;
+    margin-top: -100px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-bottom: 30px;
   }
 
   .heading p {
-    width: 75%;
-    margin-top: 30px;
+    text-transform: uppercase;
     font-weight: 700;
-    color: white;
     font-size: 2rem;
+    width: 90%;
   }
 
   .heading button {
@@ -47,89 +82,86 @@
     color: white;
   }
 
-  .logo img {
-    width: 100px;
-    margin: 30px;
-  }
-
-  .main-nav {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .main-nav ul {
-    list-style: none;
-    padding-left: 0px;
-    width: 90%;
-  }
-  .main-nav ul li {
-    background-color: #82c3f5;
-    padding: 10px;
-  }
-
-  .main-nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-weight: 700;
-    padding: 10px;
-  }
-
-  .main-content {
-    margin-top: 30px;
-  }
-
-  .main-content h2 {
-    margin-bottom: 0px;
-  }
-
   .main-content img {
     width: 50px;
   }
 
-  .about-us-listed {
-    margin: 0px 25px;
+  .about-us-tablet {
+    width: 100%;
+    height: 350px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .left-side {
+    height: 350px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    text-align: left;
+    justify-content: center;
+    width: 100%;
+
   }
 
-  .about-us-listed ul {
-    align-self: flex-start;
+  .left-side h3 {
+    padding-left: 30px;
+  }
+
+  .left-side ul {
     list-style-image: url(../img/arrow_bullet.png);
     list-style-position: inside;
-    padding-left: 0px;
+    padding-left: 30px;
   }
 
-  .about-us-listed ul li {
-    text-align: left;
-    padding-left: 0;
+  .left-side p {
+    padding-left: 30px;
   }
 
-  .about-us-listed p {
-    text-align: left;
-  }
-
-  .about-us-listed img {
+  .right-side {
     width: 100%;
-    align-self: center;
+  }
+
+  .right-side img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .custom-left {
+    justify-content: flex-start;
+    height: 300px;
   }
 
   .reviews {
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 10px auto;
+
   }
 
   .reviewer {
     display: flex;
     flex-direction: column;
+
     background-color: #82c3f5;
-    width: 90%;
-    height: 200px;
-    margin: 10px 0px;
+    width: 45%;
+    height: 225px;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+  }
+
+  .self-aligned {
+    flex-wrap: nowrap;
   }
 
   .reviewer p {
-
     text-align: left;
+    margin-left: 15px;
+    margin-right: 15px;
   }
 
   .character {
@@ -144,6 +176,22 @@
 
   .character p {
     color: black;
+  }
+
+  .inline-images {
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .contact-info h3 {
+    margin-bottom: 0px;
+  }
+
+
+  .inline-images p {
+    margin:5px;
   }
 
   .character img {
@@ -167,49 +215,32 @@
     padding: 0px;
   }
 
-  #social {
-    margin-bottom: 50px;
+  .contact-info {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-flow: wrap;
   }
+
 
   .fa {
     font-size: 20px;
     color: white;
   }
 
-  .contact-info {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-
   .green {
+    width: 50%;
+    height: 200px;
     color: white;
     background-color: #32E49F;
-    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-  }
-
-  .inline-images {
-    height: 100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .contact-info h3 {
-    margin-bottom: 0px;
-  }
-
-
-  .inline-images p {
-    margin:5px;
   }
 
   .red {
     color: white;
+    width: 50%;
     background-color: #FC5282;
     height: 200px;
     display: flex;
@@ -232,8 +263,9 @@
 
   .blue {
     color: white;
+    width: 50%;
     background-color: #376CE4;
-    height: 150px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -245,11 +277,16 @@
 
   .contact-info-home {
     display: flex;
+    width: 50%;
     flex-direction: row;
     background-color: #82c3f5;
-    height: 300px;
+    height: 200px;
     align-items: center;
     justify-content: center;
+  }
+
+  .contact-info-home img {
+    width: 200px;
   }
 
   .mapouter {
@@ -267,6 +304,7 @@
   }
 
   .form-wrapper {
+    margin: 30px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -283,6 +321,7 @@
   }
 
   .input-form {
+
     display: flex;
     flex-direction: column;
     width: 90%;
@@ -290,8 +329,15 @@
     align-items: center;
   }
 
-  .input-form input {
+  .inline-input {
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .input-form input {
+    width: 30%;
     height: 30px;
     padding: 5px 5px;
     margin-bottom: 15px;
@@ -300,12 +346,22 @@
   }
 
   .input-form textarea {
-    width: 100%;
+    width: 99%;
     padding: 5px 5px;
-    margin: 0px;
+    margin: 0px 5px;
     margin-bottom: 10px;
     border-radius: 3px;
     border: 1px solid #e1e1e1;
+  }
+
+  .form-wrapper button {
+    align-self: flex-start;
+    background-color: orange;
+    color: white;
+    border-radius: 5px;
+    border: 0px;
+    width: 80px;
+    height: 30px;
   }
 
   .footer {
@@ -340,5 +396,6 @@
     list-style-type: none;
     padding: 5px 10px;
   }
+
 
 }
