--- a/project2/css/phone.css
+++ b/project2/css/phone.css
@@ -1,16 +1,21 @@
 
+  body {
+    margin: 0px auto;
+    font-family: 'Roboto', sans-serif;
+  }
+
   .heading {
     width: 100%;
-    height: 250px;
+    height: 300px;
+    text-align: center;
+    background-image: url(../img/banner3.jpg);
     flex-direction: column;
-    justify-content: space-around;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-  }
-
-  body {
-    margin: 0px;
   }
 
   .starts span {
@@ -18,9 +23,10 @@
   }
 
   .heading p {
-    width: 75%;
-    margin-top: 30px;
-    font-weight: 700;
+    width: 90%;
+    margin: 30px 30px;
+    font-weight: 400;
+    text-transform: uppercase;
     color: white;
     font-size: 2rem;
   }
@@ -47,7 +53,17 @@
     color: white;
   }
 
+  #logo-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 30px;
+    background-color: rgba(0,0,0,0);
+  }
+
   .logo img {
+    text-align: center;
     width: 100px;
     margin: 30px;
   }
@@ -55,35 +71,43 @@
   .main-nav {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 100%;
   }
 
   .main-nav ul {
     list-style: none;
     padding-left: 0px;
-    width: 90%;
+    width: 100%;
+    text-align: center;
   }
   .main-nav ul li {
     background-color: #82c3f5;
-    padding: 10px;
+    padding: 20px;
   }
 
   .main-nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: 700;
+    text-transform: uppercase
     padding: 10px;
   }
 
   .main-content {
     margin-top: 30px;
+    text-align: center;
   }
 
   .main-content h2 {
-    margin-bottom: 0px;
+    margin-bottom: 10px;
+    font-weight: 400;
+    font-size: 2rem;
   }
 
   .main-content img {
     width: 50px;
+    margin-bottom: 30px;
   }
 
   .about-us-listed {
@@ -91,6 +115,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .left-side h3 {
+    color: #82c3f5;
+    font-weight: 500;
+    font-size: 1.25rem;
   }
 
   .about-us-listed ul {
@@ -116,6 +146,10 @@
 
   .reviews {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
   }
 
   .reviewer {
@@ -125,10 +159,11 @@
     width: 90%;
     height: 200px;
     margin: 10px 0px;
+    color: white;
   }
 
   .reviewer p {
-
+    padding: 0px 25px;
     text-align: left;
   }
 
@@ -181,10 +216,12 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    text-align: center;
   }
 
   .green {
     color: white;
+    text-transform: uppercase;
     background-color: #32E49F;
     height: 200px;
     display: flex;
@@ -210,6 +247,7 @@
 
   .red {
     color: white;
+    text-transform: uppercase;
     background-color: #FC5282;
     height: 200px;
     display: flex;
@@ -232,6 +270,7 @@
 
   .blue {
     color: white;
+    text-transform: uppercase;
     background-color: #376CE4;
     height: 150px;
     display: flex;
@@ -323,6 +362,7 @@
      list-style-position: inside;
      width: 100%;
      height: 150px;
+     align-items: center;
   }
 
   .footer-nav ul {
