--- a/project2/css/tablet.css
+++ b/project2/css/tablet.css
@@ -1,6 +1,15 @@
 
   body {
     margin: 0px;
+    font-family: 'Roboto', sans-serif;
+  }
+
+  #main-contents {
+    text-align: center;
+  }
+
+  .centered {
+    text-align: center;
   }
 
   header {
@@ -42,8 +51,8 @@
   .heading {
     color: white;
     width: 100%;
-    height: 500px;
-    margin-top: -100px;
+    height: 400px;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -53,11 +62,16 @@
     margin-bottom: 30px;
   }
 
+  .bck-image {
+    background-image: url(../img/banner3.jpg);
+  }
+
   .heading p {
     text-transform: uppercase;
-    font-weight: 700;
-    font-size: 2rem;
-    width: 90%;
+    font-weight: 400;
+    font-size: 2.5rem;
+    width: 80%;
+    text-align: center;
   }
 
   .heading button {
@@ -82,8 +96,18 @@
     color: white;
   }
 
+  .main-content {
+    margin-top: 30px;
+    text-align: center;
+  }
+
+  .main-content h2 {
+    margin-bottom: 10px;
+  }
+
   .main-content img {
     width: 50px;
+    margin-bottom: 30px;
   }
 
   .about-us-tablet {
@@ -106,6 +130,7 @@
   }
 
   .left-side h3 {
+    color: #82c3f5;
     padding-left: 30px;
   }
 
@@ -139,6 +164,8 @@
     flex-direction: row;
     flex-wrap: wrap;
     margin: 10px auto;
+    color: white;
+
 
   }
 
@@ -220,6 +247,7 @@
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
+    text-align: center;
   }
 
 
@@ -232,6 +260,7 @@
     width: 50%;
     height: 200px;
     color: white;
+    text-transform: uppercase;
     background-color: #32E49F;
     display: flex;
     flex-direction: column;
@@ -241,6 +270,7 @@
   .red {
     color: white;
     width: 50%;
+    text-transform: uppercase;
     background-color: #FC5282;
     height: 200px;
     display: flex;
@@ -264,6 +294,7 @@
   .blue {
     color: white;
     width: 50%;
+    text-transform: uppercase;
     background-color: #376CE4;
     height: 200px;
     display: flex;
@@ -379,6 +410,7 @@
      list-style-position: inside;
      width: 100%;
      height: 150px;
+     align-items: center;
   }
 
   .footer-nav ul {
